--- a/contactList/src/main/res/values/dimens.xml
+++ b/contactList/src/main/res/values/dimens.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="dimen_contact_image_size">60dp</dimen>
-    <dimen name="dimen_10">10dp</dimen>
     <dimen name="dimen_0">0dp</dimen>
     <dimen name="dimen_5">5dp</dimen>
+    <dimen name="dimen_10">10dp</dimen>
+    <dimen name="dimen_30">30dp</dimen>
+    <dimen name="dimen_contact_image_size">60dp</dimen>
+    <dimen name="dimen_progress_bar">80dp</dimen>
+    <dimen name="dimen_200">200dp</dimen>
 </resources>
