--- a/contactList/src/main/res/values/dimens.xml
+++ b/contactList/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="dimen_10">10dp</dimen>
     <dimen name="dimen_30">30dp</dimen>
     <dimen name="dimen_contact_image_size">60dp</dimen>
-    <dimen name="dimen_progress_bar">80dp</dimen>
+    <dimen name="dimen_progress_bar">60dp</dimen>
     <dimen name="dimen_200">200dp</dimen>
+    <dimen name="txt_18">18sp</dimen>
 </resources>
