--- a/contactList/src/main/res/layout/contact_list_view.xml
+++ b/contactList/src/main/res/layout/contact_list_view.xml
@@ -2,7 +2,23 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:animateLayoutChanges="true"
     android:layout_height="match_parent">
+
+    <include
+        android:id="@+id/header"
+        android:visibility="gone"
+        layout="@layout/contacts_list_view_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_1"
+        android:background="@color/icon_color"
+        android:elevation="@dimen/dimen_2"
+        app:layout_constraintTop_toBottomOf="@id/header" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -20,9 +36,9 @@
         android:layout_width="@dimen/dimen_0"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:textSize="@dimen/txt_18"
         android:textStyle="bold|italic"
         android:visibility="gone"
-        android:textSize="@dimen/txt_18"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,5 +50,5 @@
         android:layout_height="@dimen/dimen_0"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/header" />
 </androidx.constraintlayout.widget.ConstraintLayout>
