--- a/contactList/src/main/res/values/dimens.xml
+++ b/contactList/src/main/res/values/dimens.xml
@@ -4,8 +4,15 @@
     <dimen name="dimen_5">5dp</dimen>
     <dimen name="dimen_10">10dp</dimen>
     <dimen name="dimen_30">30dp</dimen>
+    <dimen name="dimen_40">40dp</dimen>
+    <dimen name="dimen_200">200dp</dimen>
+
+    <dimen name="txt_18">18sp</dimen>
+
+
+    <dimen name="header_icon_size">30dp</dimen>
     <dimen name="dimen_contact_image_size">60dp</dimen>
     <dimen name="dimen_progress_bar">60dp</dimen>
-    <dimen name="dimen_200">200dp</dimen>
-    <dimen name="txt_18">18sp</dimen>
+    <dimen name="dimen_1">1dp</dimen>
+    <dimen name="dimen_2">2dp</dimen>
 </resources>
